data/all_generated_tests/raw_wast_tests/block_StackCorruption_1932.wast
;; 3. **Test Description**: Use a `block` with a `blocktype` expecting a return value type, but ensure the instructions within the block do not push any value to the stack. This checks for stack underflow during result verification at block end.    - **Constraint Checked**: Ensures that the block's results meet the specified `blocktype` for the operand stack.    - **Relation to Stack Corruption**: Failure to correctly validate the stack before ending the block can corrupt subsequent stack states.

(assert_invalid
  (module (func $test-block-underflow (result i32)
    (block (result i32) end)
  ))
  "type mismatch"
)